<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>snmp.demo</groupId>
	<artifactId>snmp_demo</artifactId>
	<name>snmp_demo</name>
	<version>1.0.0</version>
	<description>SNMP</description>
	<url>https://jdp-demo.googlecode.com/svn/branches/branch_snmp_demo</url>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>./</directory>
							<includes>
								<include>**/.#*</include>
								<include>lib/**/*.jar</include>
								<include>${artifactId}*.jar</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<!-- dependency:copy-dependencies -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>process-sources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>lib</outputDirectory>
							<overWriteReleases>true</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>GBK</encoding>
					<compilerArgument>-Djava.ext.dirs=lib</compilerArgument>
					<compilerArguments>
						<sourcepath>src/main/**/*.java</sourcepath>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
						<id>jar-server-rt</id>
						<configuration>
							<source>1.6</source>
							<target>1.6</target>
							<excludes>
								<exclude>**/.#*</exclude>
								<exclude>**/*.xml</exclude>
								<exclude>**/*.properties</exclude>
								<exclude>**/Test*.*</exclude>
								<exclude>**/*Test.*</exclude>
							</excludes>
							<archive>
								<index>false</index>
								<manifest>
									<mainClass>Main</mainClass>
									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
									<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								</manifest>
								<manifestEntries>
									<mode>development</mode>
									<url>${pom.url}</url>
									<key>value</key>
								</manifestEntries>
							</archive>
							<useDefaultManifestFile>true</useDefaultManifestFile>
							<outputDirectory>./</outputDirectory>
							<finalName>${artifactId}</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<createChecksum>true</createChecksum>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>central</id>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>oosnmpRepo</id>
			<url>dav:https://server.oosnmp.net/dist/release</url>
		</repository>
	</repositories>
	<developers>
		<developer>
			<name>kind</name>
			<email>kind790@163.com</email>
		</developer>
	</developers>
	<dependencies>
		<dependency>
			<groupId>org.snmp4j</groupId>
			<artifactId>snmp4j</artifactId>
			<version>2.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.14</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.17</version>
		</dependency>
	</dependencies>
</project>
